[package]
name = "http-rust"
version = "0.1.0"
edition = "2021"
description = "http library implementation for small scale web apps"
repository = "https://github.com/techmornach/http-rust"
homepage = "https://techmornach.vercel.app"
documentation = "https://techmornach.vercel.app"
readme = "README.md"
license = "MIT"





# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
